--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -1,7 +1,11 @@
 .logo{
-    width: 200px;
-    height: 200px;
-    background-image: url('../images/logo.png');
-    /* background-color: red; */
-    /* background-blend-mode: multiply; */
+    width: 250px;
+    height: 250px;
+    border: 2px solid white;
+    margin-top: 5%;
+    max-width: 100%;
+    
+    -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
+   
 }   
