--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 body{
-    background-image: url('images/background.png');
-    background-size: cover;
-    background-repeat: no-repeat ;
     text-align: center;
     color: white;
     font-family: fantasy;
     font-size: large;
+    background-image: url('./images/background.png');
+    background-repeat: no-repeat center center cover;
+    background-size: 100% auto;
+    height: 100%; 
 }
