adding styles to typewriter; fixed

--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -3,7 +3,7 @@
     height: 200px;
     margin-top: 5%;
     max-width: 100%;
-    border: 2px ridge white;
+    border: 2px ridge rgb(255, 255, 255);
     border-radius: 20px;
     box-shadow: 0 0 20px whitesmoke;
     
