--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
-body{
-    text-align: center;
-    color: white;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: large;
-    background-image: url('./images/background.png');
-    background-repeat: no-repeat center center cover;
-    background-size: 100% auto;
-    height: 100%; 
+    color: white;
+    background-color: rgb(26, 26, 26);
 }
