--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,42 +1,35 @@
 .logo{
     width: 80px;
     height: 80px;
-    margin-top: 5%;
     max-width: 100%;
-    /* border: 2px ridge rgb(255, 255, 255);
-    border-radius: 20px;
-    box-shadow: 0 0 20px whitesmoke; */
-    
-
 }  
-.logo-div{
-    -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
-    filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
-} 
+
 
 .navbar{
-    width:100%;
-    height:100vh;
-    /* background-image: url(img2.jpg); */
-    /* background-size: cover; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  nav{
-    width: 100%;
-    height: 50px;
-    background-color: #0005;
-    line-height: 50px;
-  }
+
   nav ul{
-    float: right;
-    margin-right: 30px;
+    display: flex;
+    align-items: center;
   }
+
   nav ul li{
     list-style-type: none;
-    display: inline-block;
     transition: 0.7s all;
+    margin-right: 20px;
   }
+
+  ul li:last-child {
+    margin-right: 0px;
+  }
+
   nav ul li:hover{
-    background-color:#088;
+    color: rgb(26, 26, 26);
+    background-color:rgb(255, 255, 255);
+    
   }
   nav ul li a{
     text-decoration: none;
