--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*{  
+    display: flex;
+    justify-content: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     background-color: rgb(26, 26, 26);
