--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 *{  
-    display: flex;
-    justify-content: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
+    padding: 0;
+    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     color: white;
     background-color: rgb(26, 26, 26);
 }
+
+
