--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,29 @@
-*{  
-    margin: 0;
-    padding: 0;
-    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+*{
     color: white;
-    background-color: rgb(26, 26, 26);
 }
+body{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    background-color: rgb(26, 26, 26) !important;
+    font-family: 'Cascadia Code',Consolas, monospace;
+    }
+.main{
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* @media screen and (max-width: 480px) {
+
+    .main{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+    
+} */
 
 
