--- a/src/components/home/hello-message.css
+++ b/src/components/home/hello-message.css
@@ -1,6 +1,7 @@
 .typewriter{
-    font-size: 2.3vh;
+    font-size: 1.4vh;
     display: flex;
+    font-family: 'Press Start 2P', cursive;
 }
 
 .wave{
@@ -11,7 +12,7 @@
 
 @media screen and (max-width: 760px){
     .typewriter{
-        font-size: 1.8vh;
+        font-size: 1.1vh;
     }
 
     .wave{
@@ -23,7 +24,7 @@
 
 @media screen and (max-width: 480px){
     .typewriter{
-        font-size: 1.4vh;
+        font-size: 1vh;
     }
 
     .wave{
