--- a/src/components/home/hello-message.css
+++ b/src/components/home/hello-message.css
@@ -1,5 +1,6 @@
 .typewriter{
-    font-size: 1.4vh;
+    /* width: 600px; */
+    font-size: 1.8vh;
     display: flex;
     font-family: 'Press Start 2P', cursive;
 }
@@ -12,7 +13,7 @@
 
 @media screen and (max-width: 760px){
     .typewriter{
-        font-size: 1.1vh;
+        font-size: 1.5vh;
     }
 
     .wave{
@@ -24,7 +25,7 @@
 
 @media screen and (max-width: 480px){
     .typewriter{
-        font-size: 1vh;
+        font-size: 1.1vh;
     }
 
     .wave{
