--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -2,7 +2,7 @@
     height: 300px;
     width: 550px;
     text-align: center;
-    background-color: black;
+    background-color: rgb(18, 18, 18);
     border: 5px solid white;
     border-radius: 10px;
     display: flex;
