--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,29 @@
 .navbar{
-    /* width: 300px; */
      display: flex;
     flex-direction: row; 
-    /* justify-content: space-around;  */ 
+    justify-content: center;
+    
+}
+
+.nav-button{
+    text-align: center;
+	display: inline-block;
+	margin:5px;
+    font-weight: bold;
+    padding: 10px 10px 10px 10px ;
+    background-color: rgb(255, 255, 255);
+    /* text-shadow: -1px -1px black, 1px 1px white; */
+    color: rgb(0, 0, 0);
+    -webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	-o-border-radius: 7px; 
+	 border-radius: 7px;
+    box-shadow: 0 .2em rgb(202, 201, 201); 
+    cursor: pointer;
+}
+
+.nav-button:active{
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    cursor: pointer;
 }
