--- a/src/components/home/logo.css
+++ b/src/components/home/logo.css
@@ -1,18 +1,19 @@
-
+.logo-container{
+    display: flex;
+    justify-content: center;
+}
 .logo{ 
-    height: 290px;
-    width: 300px;
+
+    height: 280px;
+    width: 290px;
     filter: contrast(200%);
+   
 }  
 
 @media screen and (max-width: 760px){
     .logo{
         height: 250px;
         width: 260px;
-        /* image-rendering: auto;
-        image-rendering: crisp-edges;
-        image-rendering: pixelated;
-        image-rendering: -webkit-optimize-contrast; */
     }
 }
 
@@ -20,9 +21,5 @@
     .logo{
         height: 220px;
         width: 230px;
-        /* image-rendering: auto;
-        image-rendering: crisp-edges;
-        image-rendering: pixelated;
-        image-rendering: -webkit-optimize-contrast; */
-    }
+     }
 }
