--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,14 @@
     
 }
 body{
-    min-height: 100%;
+    height: 100%;
     width: 100%;
     margin: 0;
     background-color: rgb(0, 0, 0) !important;
     overflow-x: auto;
     }
 .main {
-position: fixed;
+position: absolute;
   top: 20%;
   left: 50%;
   transform: translate(-50%, -20%);
