--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,18 +1,25 @@
+.nav-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .navbar{
      display: flex;
-    flex-direction: row; 
+    flex-wrap: wrap;
     justify-content: center;
-    
+    flex: 100%;
+   
 }
 
 .nav-button{
+    font-size: 1.7vh;
     text-align: center;
 	display: inline-block;
 	margin:5px;
     font-weight: bold;
     padding: 10px 10px 10px 10px ;
     background-color: rgb(255, 255, 255);
-    /* text-shadow: -1px -1px black, 1px 1px white; */
     color: rgb(0, 0, 0);
     -webkit-border-radius: 7px;
 	-moz-border-radius: 7px;
@@ -20,10 +27,31 @@
 	 border-radius: 7px;
     box-shadow: 0 .2em rgb(202, 201, 201); 
     cursor: pointer;
+    text-decoration: none;
 }
 
 .nav-button:active{
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     cursor: pointer;
+}
+
+@media screen and (max-width: 760px){
+    .navbar{
+        width: 740px;
+    }
+    .nav-button{
+        font-size: 1.5vh;
+    }
+
+}
+
+@media screen and (max-width: 480px){
+    .navbar{
+        width: 400px;
+     }
+     .nav-button{
+        flex: 30%;
+        font-size: 1.3vh;
+     }
 }
