--- a/src/components/resume/myresume.css
+++ b/src/components/resume/myresume.css
@@ -1,14 +1,34 @@
 .resume-container{
-    height: 900px;
-    width: 750px;
+    width: 700px;
     text-align: center;
     background-color: rgb(18, 18, 18);
     border: 5px solid white;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+
 }
 .my-resume{
+    height: 420px;
+    max-width: 100%;
     object-fit: contain;
-  min-height: 100%;
+}
+
+@media screen and (max-width: 760px){
+    .resume-container{
+        width: 70%;
+    }
+    .my-resume{
+        width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 480px){
+    .resume-container{
+        width: 60%;
+    }
+    .my-resume{
+        width: 100%;
+    }
 }
