--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -1,6 +1,6 @@
 .intro-container{
-    height: 300px;
-    width: 550px;
+    /* height: 380px; */
+    width: 580px;
     text-align: center;
     background-color: rgb(18, 18, 18);
     border: 5px solid white;
