--- a/src/index.css
+++ b/src/index.css
@@ -37,11 +37,10 @@ body{
 
 
 .main {
-  position: fixed;
+  position: absolute;
   top: 10%;
   left: 50%;
   transform: translate(-50%, -10%);
-  overflow-y: scroll;
 }
 
 .main > * {
