--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -30,10 +30,12 @@
     text-decoration: none;
 }
 
-.nav-button:active{
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+
+.nav-button:hover{
     cursor: pointer;
+    box-shadow: none;
+	position: relative;
+	top: .3em;
 }
 
 @media screen and (max-width: 760px){
