restructured resume page

--- a/src/components/resume/myresume.css
+++ b/src/components/resume/myresume.css
@@ -8,6 +8,10 @@
     flex-direction: column;
 
 }
+.resume-buttons{
+    display: flex;
+    
+}
 .my-resume{
     height: 420px;
     max-width: 100%;
