--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -38,6 +38,12 @@
 	top: .3em;
 }
 
+.nav-button:disabled{
+    color: rgb(71, 69, 69);
+    position: none;
+    top: 0em;
+}
+
 @media screen and (max-width: 760px){
     .navbar{
         width: 740px;
