--- a/src/components/resume/my-resume.css
+++ b/src/components/resume/my-resume.css
@@ -7,15 +7,11 @@
     display: flex;
     flex-direction: column;
 }
-.my-resume-container{
-    height: 420px;
-    max-width: 100%;
-    object-fit: fill;
-}
+
 .my-resume{
-    height: 420px;
+    height: 600px;
     max-width: 100%;
-    object-fit: fill;
+    object-fit: contain;
 }
 
 
@@ -34,7 +30,7 @@
         width: 60%;
     }
     .my-resume{
-        width: 100%;
+        max-width: 100%;
         object-fit: contain;
     }
 
@@ -42,10 +38,11 @@
 
 @media screen and (max-width: 480px){
     .resume-container{
+        
         width: 80%;
     }
     .my-resume{
-        width: 100%;
+        max-width: 100%;
         object-fit: contain;
     }
 }
