--- a/src/components/resume/my-resume.css
+++ b/src/components/resume/my-resume.css
@@ -7,11 +7,21 @@
     display: flex;
     flex-direction: column;
 }
+.my-resume-container{
+    position: relative;
+  overflow-y: hidden;
+  width: 100%;
+  padding-top: 56.25%;
 
+}
 .my-resume{
-    height: 600px;
-    max-width: 100%;
-    object-fit: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -31,7 +41,7 @@
     }
     .my-resume{
         max-width: 100%;
-        object-fit: contain;
+        object-fit: cover;
     }
 
 }
