working on about page

--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -1,54 +1,52 @@
-.profile{
+.about-item{
     display: flex;
     flex-direction: column;
 }
 
-.profile > h3{
+.about-item > h3{
     text-align: center;
-    /* line-height: 1.5; */
     font-style: bold;
     font-size: 2.4vh;
 }
 
-.profile > h3 > span {
+.about-item > h3 > span {
     background-color: rgb(110, 107, 107); 
 }
 
-.profile > p {
+.about-item > p {
     display: flex;
     text-align: center;
     font-size: 1.5vh;
     line-height: 1.5;
-    /* margin: 10px; */
     
 }
 
 
 
 @media screen and (max-width: 760px) {
-    .profile{
+    .about-item{
         text-align: center;
     }
-    .profile > h3{
+    .about-item > h3{
         line-height: 2.1;
         font-size: 2vh;
         
     } 
-    .profile > p{
+    .about-item > p{
         font-size: 1.3vh;
       
     } 
 } 
 
 @media screen and(max-width: 480px) {
-    .profile{
+    .about-item{
         text-align: center;
     }
-    .profile > h3{
+    .about-item > h3{
         font-size: 1.6vh;
         line-height: 1.2;
     } 
-    .profile > p{
+    .about-item > p{
         font-size: 0.9vh;
     } 
     
