--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -1,3 +1,7 @@
+.about-item-container{
+    display: flex;
+    flex-direction: row;
+}
 .about-item{
     display: flex;
     flex-direction: column;
@@ -18,6 +22,23 @@
     text-align: center;
     font-size: 1.5vh;
     line-height: 1.5;
+    
+}
+
+.preview{
+ 
+    background-color: rgb(62, 61, 61);
+    
+}
+
+
+.preview-reverse{
+    background-color: rgb(62, 61, 61);
+}
+
+.preview-image{
+    height: 100%;
+    max-width: 100%; 
     
 }
 
