--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -33,8 +33,8 @@
     overflow:hidden;
 }
 .preview-button{
-    animation: preview-button-container 2s;
-    margin-top:0%;
+    /* animation: preview-button-container 2s;
+    margin-top:0%; */
     font-size: 1.7vh;
     text-align: center;
 	display: inline-block;
@@ -61,7 +61,7 @@
     color: black;
 }
 
-@keyframes preview-button-container {
+/* @keyframes preview-button-container {
     from {
         margin-left: -100%;
     }
@@ -70,12 +70,12 @@
         margin-left: 0%;
 
     }
-  }
+  } */
 .preview-reverse-container {
     display: flex;
     overflow:hidden;
-}
-.reverse{
+} 
+/*.reverse{
     animation: preview-reverse-container 2s;
     margin-top:0%;
 }
@@ -88,15 +88,15 @@
         margin-left: 0%;
 
     }
-  }
+  } */
 .preview-image-container {
     width:100%;
     overflow:hidden;
 }
 
 .preview-image{
-    animation: preview-image-container 2s;
-    margin-top:0%;
+    /* animation: preview-image-container 2s;
+    margin-top:0%; */
     object-fit: cover;
     height: 450px;
     max-width: 100%; 
