--- a/src/components/about/about-contents/from-to.css
+++ b/src/components/about/about-contents/from-to.css
@@ -1,11 +1,27 @@
 .from-to-container{
-    display: flex; 
-     flex-direction: row;
+    /* display: flex;  */
     width: 100%;
+}
+
+.edu-exp-container{
+    display: flex; 
+    flex-direction: row;
+    justify-content: center;
+}
+
+.edu-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.exp-container{
+    display: flex;
+    flex-direction: column;
 }
 
 
 
 .line{
-    border-left: 6px solid green;
+    border-left: 3px solid white;
+    border-radius: 10px;
 }
