now the big part

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 *{
     color: white;
-    font-family: 'Press Start 2P', cursive !important;
+    font-family: 'Press Start 2P', cursive;
     
 }
 body{
