--- a/src/components/about/about-contents/from-to.css
+++ b/src/components/about/about-contents/from-to.css
@@ -1,45 +1,47 @@
 .from-to-container{
     display: flex; 
     flex-direction: column;
-    width: 100%;
 }
 
 .edu-exp-container{
     display: flex; 
     flex-direction: row;
+    justify-content: center;
     
 }
 
 .edu-container{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     border: 0px solid white;
     border-radius: 20px;
 }
 
+
 .edu-item{
  background-color: white;
- margin: 10px;
+ margin: 20px;
  
 }
 
 .edu-contents{
     display: flex;
-    flex-direction: row;
-    
+    flex-direction: row; 
 }
 
 .edu-desc{
     text-align: left;
     margin-left: 5px;
-    /* flex: 1; */
-    
 }
-
+.edu-desc > * {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .edu-desc > h4{
     color: black;
     font-weight: bolder;
     font-size: 1.8vh;
+   
 }
 
 .edu-desc > p{
@@ -57,20 +59,16 @@
 .edu-time{
     text-align: right;
     margin-right: 5px;
-    /* width: 100%; */
-    /* flex: 0; */
+   
 }
 
 .edu-time > span {
     color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
     font-size: 1vh;
 }
 
-/* .exp-container{
-    display: flex;
-    flex-direction: column;
-} */
 
 .line{
     border-left: 3px solid white;
@@ -119,26 +117,25 @@
     
     .edu-desc > p{
         color: black;
-        font-size: 1vh;
+        font-size: 0.9vh;
     
     }
     
     .edu-desc > span{
         color: black;
         font-style: italic;
-        font-size: 0.8vh;
+        font-size: 0.7vh;
     }
     
     .edu-time{
         text-align: right;
         margin-right: 5px;
-        width: 80%;
     }
     
     .edu-time > span {
         color: black;
         font-style: italic;
-        font-size: 0.6vh;
+        font-size: 0.5vh;
     }
 
     
