--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -6,7 +6,6 @@
 .about-item{
     display: flex;
     flex-direction: column;
-    
 }
 
 .about-item > h3{
@@ -65,6 +64,9 @@
 } 
 
 .preview-image-container {
+    display: flex;
+    justify-content: center;
+    height: 450px;
     width:100%;
     overflow:hidden;
 }
@@ -72,9 +74,10 @@
 .preview-image{
     animation: preview-image-container 1s;
     margin-top:0%;
-    object-fit: cover;
-    height: 450px;
-    max-width: 100%; 
+    height: 100%;
+    width: 100%; 
+    object-fit: contain;
+   
 }
 
 @keyframes preview-image-container {
