--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -76,8 +76,7 @@
     margin-top:0%;
     height: 100%;
     width: 100%; 
-    object-fit: contain;
-   
+    object-fit: scale-down;
 }
 
 @keyframes preview-image-container {
