--- a/src/index.css
+++ b/src/index.css
@@ -52,9 +52,12 @@ body{
     position: relative;
     bottom:0;
     width:100%;
-    color: white;
+ 
     text-align: center;
     background-color: black;
+}
+.footer > p{
+    color: rgb(0, 255, 43);
 }
 
 @media screen and (max-width: 760px) {
