--- a/src/components/about/about-me.css
+++ b/src/components/about/about-me.css
@@ -1,11 +1,12 @@
 .about-container{
     width: 700px;
     text-align: center;
-    background-color: rgb(0, 0, 0);
+    /* background-color: rgb(0, 0, 0); */
     border: 0px solid white;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    z-index: 100;
 }
 .about-buttons{
     display: flex;
