--- a/src/components/about/about-contents/from-to.css
+++ b/src/components/about/about-contents/from-to.css
@@ -33,22 +33,22 @@
     margin-left: 5px;
 }
 .edu-desc > * {
+    color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .edu-desc > h4{
-    color: black;
+    
     font-weight: bolder;
     font-size: 1.8vh; 
+    /* width: 100%; */
 }
 
 .edu-desc > p{
-    color: black;
     font-size: 1.5vh;
 
 }
 
 .edu-desc > span{
-    color: black;
     font-style: italic;
     font-size: 1.4vh;
     
