--- a/src/components/about/about-contents/from-to.css
+++ b/src/components/about/about-contents/from-to.css
@@ -11,7 +11,6 @@
 .edu-container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     border: 0px solid white;
 }
 
@@ -19,19 +18,19 @@
 .edu-item{
  background-color: white;
  margin: 20px;
+ max-width: auto;
 }
 
 .edu-contents{
     display: flex;
     flex-direction: row; 
-    /* justify-content: space-between; */
 }
 
 .edu-desc{
     text-align: left;
     float: left;
     margin-left: 5px;
-    /* margin-bottom: 20px; */
+    margin-bottom: 10px;
 }
 .edu-desc > * {
     color: black;
@@ -41,7 +40,7 @@
     font-size: 1.5vh;
     font-weight: 200;
 }
-.edu-desc > p > h4{
+.edu-desc > p > strong{
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bolder;
